--- a/concl.tex
+++ b/concl.tex
@@ -1,15 +1,15 @@
 \chapter{Considerações finais}
 
-Este capítulo apresenta as considerações finais da monografia. Aqui são discutidos os objetivos do projeto e os resultados alcançados no sistema desenvolvido. Além de sugestões para trabalhos futuros.
+Este capítulo apresenta as considerações finais da monografia. Aqui são discutidos os objetivos do projeto e os resultados alcançados no sistema desenvolvido, são apresentadas considerações sobre a metodologia utilizada, além de sugestões para trabalhos futuros.
 
 \section{Considerações finais}
 
 % introdução?
-Como foi visto foi desenvolvido um sistema capaz de ser integrado em uma linha de produção minimizando falhas e erros de classificação de objetos além de gerar uma estimativa da orientação de cada objeto para posterior reposicionamento caso necessário.
-Atingiu-se portanto o objetivo geral do trabalho visto que através da utilização de um sistema de redes neurais o sistema desenvolvido foi capaz de classificar objetos metálicos com $100\%$ de acerto e foi capaz de medir o ângulo de rotação com erro médio de aproximadamente $1.2^o$.
+Como foi visto desenvolveu-se um sistema capaz de ser integrado em uma linha de produção minimizando falhas e erros de classificação de objetos além de gerar uma estimativa da orientação de cada objeto para posterior reposicionamento caso necessário.
+Atingiu-se portanto o objetivo geral do trabalho visto que através da utilização de um sistema de redes neurais o sistema desenvolvido foi capaz de classificar objetos metálicos com $100\%$ de acerto e foi capaz de medir o ângulo de rotação com erro médio de $1.2^o$.
 %3 Objetivos: geral
 %O objetivo geral deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina.
-Como pôde ser visto nas seções \label{sec:desenv_seg1} e \label{sec:desenv_seg2} foram analisadas e aplicadas técnicas de segmentação de imagens que permitiram a identificação da região de interesse, atingindo portanto o primeiro objetivo específico.
+Como pôde ser visto nas seções \ref{sec:desenv_seg1} e \ref{sec:desenv_seg2} foram analisadas e aplicadas técnicas de segmentação de imagens que permitiram a identificação da região de interesse, atingindo portanto o primeiro objetivo específico.
 %Para tanto, temos como objetivos específicos três objetivos que possibilitarão o cumprimento do objetivo geral.
 %O primeiro objetivo específico é analisar e aplicar técnicas de segmentação de imagens, como algoritmos de detecção de bordas, algoritmos de limiarização, segmentação baseada em crescimento de regiões.
 O segundo objetivo específico foi cumprido utilizando descritores de \emph{fourier} e propriedades de regiões gerando descritores contendo informações suficientes para classificar os objetos com sucesso.
@@ -28,11 +28,12 @@ O desenvolvimento do projeto foi dividido em três etapas conforme proposto na me
 	  \hline
 	  1-1 & Implementação da subtração de fundo.\\
 	  1-2 & Implementação da limiarização utilizando aproximações sucessivas e \\ & separação dos canais RGB.\\
-	  1-3 & Implementação da limiarização pelo método de Otsu e separação dos canais \\ & RGB.\\
-	  1-4 & Implementação do filtro de maior região conexa.\\
-	  1-5 & Implementação de crescimento de regiões baseado em características locais.\\
-	  1-6 & Remoção de crescimento de regiões  e implementação de esqueletonização e \\ & poda.\\
-	  1-7 & Implementação de normalização utilizando PCA.\\
+	  1-3 & Implementação da limiarização pelo método de Otsu.\\
+	  1-4 & Implementação de filtro morfológico e separação dos canais RGB.\\
+	  1-5 & Implementação do filtro de maior região conexa.\\
+	  1-6 & Implementação de crescimento de regiões baseado em características locais.\\
+	  1-7 & Remoção de crescimento de regiões  e implementação de esqueletonização e \\ & poda.\\
+	  1-8 & Implementação de normalização utilizando PCA.\\
 	  2-1 & Implementação de descrição utilizando descritores de \emph{fourier}.\\
 	  2-2 & Implementação de descrição utilizando propriedades de regiões.\\
 	  3-1 & Implementação de classificação utilizando redes neurais com uma única saída.\\
@@ -47,7 +48,7 @@ O desenvolvimento do projeto foi dividido em três etapas conforme proposto na me
 \end{table}
 
 %\section{Metodologia}
-%O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software MATLAB. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no MATLAB. Finalmente, na terceira etapa é implementado no MATLAB um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo.
+%O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software Matlab. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no Matlab. Finalmente, na terceira etapa é implementado no Matlab um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo.
 %Para cada etapa do desenvolvimento do projeto adota-se a metodologia de desenvolvimento em espiral, onde a cada ciclo de desenvolvimento são agregadas novas funcionalidades ao sistema.
 %Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde objetos especificamente selecionados são posicionados de forma automática, possibilitando a captura de imagens do objeto em diversas posições angulares. 
 
@@ -60,18 +61,16 @@ Por fim apresentou-se uma visão geral de redes neurais e foram apresentadas noçõ
 % considerações desenvolvimento
 No capitulo \ref{chap:desenv} foi exposto a arquitetura do sistema desenvolvido. Inicialmente foi mostrado como a imagem de entrada foi segmentada utilizando técnicas de subtração de fundo, limiarização, filtros morfológicos, operações lógicas e seleção de maior região. Foi mostrado também como a imagem foi descrita utilizando propriedades de regiões e descritores de \emph{fourier}. E finalmente como os descritores foram aplicados nas redes neurais obtendo assim a classe dos objetos e a respectiva orientação.
 
-Embora tenha sido apresentado apenas a arquitetura final do sistema, ao longo do desenvolvimento do projeto diversas arquiteturas foram utilizadas. A cada ciclo de desenvolvimento da metodologia em espiral adotada novos algoritmos foram acrescentados, substituídos ou otimizados.
-
 % considerações testes e resultados
 Finalmente no capitulo \ref{chap:testes} apresentou-se um ambiente de testes automatizado que possibilitou a validação do sistema apresentado no capitulo \ref{chap:desenv}. Utilizando o ambiente foram executados dois grupos de testes. O primeiro com 8 objetos e o segundo com 16 objetos. 
 
 O sistema mostrou-se capaz de classificar todos os objetos corretamente com $100\%$ de acerto. Isso se deu devido à qualidade dos descritores calculados, que permitiram resumir as principais características de cada classe. Além disso a topologia da rede de classificação teve papel fundamental para a convergência do treinamento e para a qualidade de decisão.
 
-Na estimativa do ângulo obteve-se a precisão de $\pm4.1^o$ nos dois testes, o que representa $2.25\%$ do total de $360^o$ possíveis. O erro médio manteve-se em $1.3^o$, com desvio de $0.85^o$ para o primeiro teste e $1.1^o$, com desvio de $0.8^o$ para o segundo teste. O erro na estimativa do ângulo é bastante influenciado pelo sucesso na etapa de segmentação e normalização da imagem. É necessário portanto para obter bons resultados controlar ao máximo as condições externas de captura das imagens. Condições boas de iluminação por exemplo tendem a melhorar o resultado da etapa de segmentação. 
+Na estimativa do ângulo obteve-se a precisão de $\pm4.1^o$ para o teste com 8 objetos e $\pm4.5^o$ para o teste com 16 objetos. O erro médio manteve-se em $1.3^o$, com desvio de $0.85^o$ para o primeiro teste e $1.1^o$, com desvio de $0.8^o$ para o segundo teste. O erro médio geral ficou portanto em $1.2^o$. O erro na estimativa do ângulo é bastante influenciado pelo sucesso na etapa de segmentação e normalização da imagem. Sendo assim, para obter bons resultados é necessário controlar ao máximo as condições externas de captura das imagens. Condições boas de iluminação por exemplo tendem a melhorar o resultado da etapa de segmentação. 
 
-Pode-se observar também que o erro na estimativa do ângulo não aumentou com a inserção de mais objetos no sistema. Isso se deu devido a estimativa ser feita com uma rede neural específica para cada objeto.
+Pôde-se observar também que o erro médio na estimativa do ângulo não aumentou com a inserção de mais objetos no sistema. Isso se deu devido a estimativa ser feita com uma rede neural específica para cada objeto. O erro máximo aumentou devido aos pesos iniciais das redes neurais que são escolhidos aleatoriamente antes do treinamento. Essa aleatoriedade pode influenciar o resultado entre redes treinadas e testadas com o mesmo conjunto de treinamento e teste.
 
-Os testes mostraram portanto que o sistema foi capaz de identificar os objetos corretamente e estimar a posição angular com precisão de $\pm4.1^o$.
+Os testes mostraram portanto que o sistema foi capaz de identificar os objetos corretamente e estimar a posição angular com precisão de $\pm4.5^o$ no pior caso.
 
 Portanto, os objetivos do projeto foram alcançados e a metodologia proposta foi seguida com algumas adaptações.
 
