--- a/inicio.tex
+++ b/inicio.tex
@@ -49,7 +49,7 @@ outros. Muitas vezes, existem etapas da produção em indústrias metalúrgicas, nas
 %Objetivo
 O objetivo deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina. 
 % Metodologia
-O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software MATLAB. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no MATLAB. Finalmente, na terceira etapa é implementado no MATLAB um sistema de redes neurais capazes de classificar objetos e medir seu ângulo. Para cada etapa do desenvolvimento do projeto adota-se a metodologia de desenvolvimento em espiral, onde a cada ciclo de desenvolvimento são agregadas novas funcionalidades ao sistema. Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde objetos especificamente selecionados são posicionados de forma automática, possibilitando a captura de imagens do objeto em diversas posições angulares. 
+O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software Matlab. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no Matlab. Finalmente, na terceira etapa é implementado no Matlab um sistema de redes neurais capazes de classificar objetos e medir seu ângulo. Para cada etapa do desenvolvimento do projeto adota-se a metodologia de desenvolvimento em espiral, onde a cada ciclo de desenvolvimento são agregadas novas funcionalidades ao sistema. Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde objetos especificamente selecionados são posicionados de forma automática, possibilitando a captura de imagens do objeto em diversas posições angulares. 
 % Desenvolvimento
 O sistema é dividido em três módulos: segmentação, descrição e classificação dos objetos. Após a aquisição da imagem do objeto a ser classificado o módulo de segmentação seleciona a área de interesse da imagem. No módulo de descrição são extraídas características da área de interesse da imagem, formando um descritor que é fornecido ao terceiro módulo do sistema que classifica o objeto e mede a sua respectiva orientação angular. 
 % Resultados
@@ -60,19 +60,19 @@ Portanto, o resultado do trabalho é um sistema capaz de classificar objetos e me
 %abstract
 \begin{abstract}
 
-Computer vision technics can be useful tools for production line automation on tasks like, for example, electronic components manufacturing, inspection of finishing on metallic objects, printed circuit boards manufacturing and others.
+Computer vision techniques can be useful tools for production line automation in tasks such as the manufacture of electronic components, inspection of finished metal objects, production of printed circuit boards, among others.
 %Técnicas de visão computacional podem ser ferramentas úteis para a automação de linhas de produção em tarefas como, por exemplo, a fabricação de componentes eletrônicos, a inspeção do acabamento em objetos metálicos, a produção de circuitos impressos, entre outros. 
-Many times there are production steps in metallurgical industries where the identification of metallic objects, and their respective angular orientation, is needed for analysis, separation or even just for classification.
+Often, there are production stages in metallurgical industries in which the identification of metallic objects, and their respective angular orientation, is needed either for analysis, separation or even only to classify these objects.
 %Muitas vezes, existem etapas da produção em indústrias metalúrgicas, nas quais se necessita identificar objetos metálicos e sua respectiva orientação angular, seja para análise, separação ou mesmo somente para classificação desses objetos. 
-The objective of this project is to develop a system capable of classifying metallic objects and to mesure its rotation angle with respect to the x axis of the Cartesian plane. The objects are previouly known by the system using machine learning technics.
+The objective of this work is to develop a system capable of classifying metallic objects and measure their respective angle of rotation with respect to the x axis of the Cartesian plane. The objects are previously known by the system using machine learning techniques.
 %O objetivo deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina. 
-The project development is divided in three steps. In the first step image segmentation technics are studied and implemented using MATLAB. In the second step description technics are studied and also implemented using MATLAB. Finally, in the third step a set of neural networks capable of classifying objects and mesuring their angle is implemented using MATLAB.
-%O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software MATLAB. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no MATLAB. Finalmente, na terceira etapa é implementado no MATLAB um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo. 
-For each step in the project development a spiral development methodology was adopted, where in each cycle of the methodology new features are agregated to the system. In order to test the system a test environment is developed, where specifically selected objectes are placed automatically, allowing the capture of images of the object in different angular positions.
+The project development is divided into three steps. The first step is the study of techniques for image segmentation and implementation in Matlab software. The second step is the study of techniques for image description and also implementation in Matlab. Finally, in the third step a set of neural networks capable of classifying objects and measuring their angle is implemented using Matlab.
+%O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software Matlab. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no Matlab. Finalmente, na terceira etapa é implementado no Matlab um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo. 
+For each step in the project development a spiral development methodology was adopted. In each cycle of the methodology new features are aggregated to the system. In order to test the system a test environment is developed, where specifically selected objects are placed automatically, allowing the capture of images of the object in different angular positions.
 %Para cada etapa do desenvolvimento do projeto adota-se a metodologia de desenvolvimento em espiral, onde a cada ciclo de desenvolvimento são agregadas novas funcionalidades ao sistema. Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde objetos especificamente selecionados são posicionados de forma automática, possibilitando a captura de imagens do objeto em diversas posições angulares. 
-The System is divided into three modules: segmentation, description, and classification of objects. After capturing an imagem of the object being classifyed the segmentation moule selects the region of interest from the image. In the description module features are extracted from the region of interest, forming a descriptor that is provided to the third module. The module then classifies the object and mesures its anglular orientation.
+The system is divided into three modules: segmentation, description, and classification of objects. After capturing an image of the object being classified, the segmentation module selects the region of interest from the image. In the description module features are extracted from the region of interest, forming a descriptor that is provided to the third module. The third module then classifies the object and measures its angular orientation.
 %O sistema é dividido em três módulos: segmentação, descrição e classificação dos objetos. Após a aquisição da imagem do objeto a ser classificado o módulo de segmentação seleciona a área de interesse da imagem. No módulo de descrição são extraídas características da área de interesse da imagem, formando um descritor que é fornecido ao terceiro módulo do sistema que classifica o objeto e mede a sua respectiva orientação angular. 
-Therefore, the result is a system able to classify objects and measure the angle of these objects using techniques of image processing and machine learning.
+Therefore, the result of this work is a system able to classify objects and measure the angle of these objects using image processing and machine learning techniques.
 %Portanto, o resultado do trabalho é um sistema capaz de classificar objetos e medir o ângulo desses objetos utilizando técnicas de processamento de imagens e aprendizado de máquina.
 
 \end{abstract}
