--- a/reflatex.bib
+++ b/reflatex.bib
@@ -142,11 +142,11 @@
 
 @MISC{MATHWORKS-HELP-4,
   author = {MathWorks},
-  title = {Bayesian regulation backpropagation},
+  title = {Choose a Multilayer Neural Network Training Function},
   year = {2013},
   owner = {telmo},
   timestamp = {2013.11.25},
-  url = {http://www.mathworks.com/help/nnet/ref/trainbr.html},
+  url = {http://www.mathworks.com/help/nnet/ug/choose-a-multilayer-neural-network-training-function.html},
   urlaccessdate = {25 de novembro de 2013}
 }
 
@@ -176,7 +176,7 @@
   year = {2013},
   owner = {telmo},
   timestamp = {2013.11.25},
-  url = {http://www.mathworks.com/products/matlab/}
+  url = {http://www.mathworks.com/products/ matlab/}
 }
 
 @INPROCEEDINGS{BACKGROUND-SUBTRACTION,
