--- a/fund_teorica.tex
+++ b/fund_teorica.tex
@@ -198,7 +198,7 @@ Para o estudo das operações morfológicas de abertura e fechamento precisa-se pri
 
 \end{itemize}
 
-A seguir apresentam-se as operações de erosão e de dilatação, que são necessárias para as operações de abertura e fechamento que são apresentadas na sequencia.
+A seguir apresentam-se as operações de erosão e de dilatação, que são necessárias para as operações de abertura e fechamento que são apresentadas na sequência.
 
 
 \subsubsection{Erosão}
@@ -654,7 +654,7 @@ O centroide de uma imagem é dado pelo centro de massa da imagem \cite{MATHWORKS-
 
 \subsection{Descritores de \emph{fourier}}
 
-Considere a figura \ref{fig:fundteor_fourier_desc_org}. Os pixeis com valor $1$ da imagem binária podem ser representados como sendo pares de coordenadas $(x_{0},y_{0}),(x_{1},y_{1}),(x_{2},y_{2}),...,(x_{K-1},y_{K-1})$, onde $K$ é o número de pixeis na imagem. Além disso os pixeis podem ser representados como uma sequencia $x(k) = x_{k}$ e $y(k) = y_{k}$ ou como $s(k) = \left [ x(k), y(k) \right ]$ para $k = 0,1,2,...,K-1$. Além disso pode-se tratar as coordenadas dos pixeis como números complexos: $s(k) = x(k) + j y(k)$.
+Considere a figura \ref{fig:fundteor_fourier_desc_org}. Os pixeis com valor $1$ da imagem binária podem ser representados como sendo pares de coordenadas $(x_{0},y_{0}),(x_{1},y_{1}),(x_{2},y_{2}),...,(x_{K-1},y_{K-1})$, onde $K$ é o número de pixeis na imagem. Além disso os pixeis podem ser representados como uma sequência $x(k) = x_{k}$ e $y(k) = y_{k}$ ou como $s(k) = \left [ x(k), y(k) \right ]$ para $k = 0,1,2,...,K-1$. Além disso pode-se tratar as coordenadas dos pixeis como números complexos: $s(k) = x(k) + j y(k)$.
 
 Tem-se que a transformada discreta de \emph{fourier} de um sinal $s(k)$ é dado pela equação \ref{eq:fundteor_dft} \cite{GONZALEZ-2006}:
 
